commented out asserts, fixed wrong comments, removed unnecessary comments, fixed markdow and latex

--- a/part1_mini_sci_comp.ipynb
+++ b/part1_mini_sci_comp.ipynb
@@ -84,9 +84,9 @@
       "source": [
         "### The Softmax function\n",
         "We will implement softmax the way it was presented in the notes in its vectorized form:\n",
-        "$$P(y=p|X) = diag\\left\\{\\sum_{j=1}^{l}exp(X^Tw_j)\\right\\}^{-1}exp(X^Tw_p)$$\n",
+        "$$P\\left( y=p \\space | \\space X \\right) = diag\\left\\{\\sum_{j=1}^{l}exp(X^Tw_j)\\right\\}^{-1}exp \\left( X^Tw_p \\right)$$\n",
         "Using the mentioned workaround to compute extreme exponentials more safely:\n",
-        "$$P(y=p|X) = diag\\left\\{\\sum_{j=1}^{l}exp(X^Tw_j - η)\\right\\}^{-1}exp(X^Tw_p - η)$$\n",
+        "$$P\\left(y=p \\space | \\space X \\right) = diag\\left\\{\\sum_{j=1}^{l}exp(X^Tw_j - η)\\right\\}^{-1}exp \\left( X^Tw_p - η \\right)$$\n",
         "where:\n",
         "\n",
         "$X$ is the data matrix with datapoints $x_i$ as it's columns\n",
@@ -118,18 +118,10 @@
         "  numerator = np.exp(p_weight_multiplied - max)\n",
         "  denominator = np.sum(np.exp(all_weights_multiplied - max), axis=1).reshape(-1,1)\n",
         "\n",
-        "  assert (numerator / denominator).shape == (datapoints_num, 1), f\"{(numerator / denominator).shape = }\"\n",
+        "#   assert (numerator / denominator).shape == (datapoints_num, 1), f\"{(numerator / denominator).shape = }\"\n",
         "\n",
         "  return numerator / denominator"
       ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ByMMhvu-99Qx"
-      },
-      "source": []
     },
     {
       "attachments": {},
@@ -140,7 +132,7 @@
       "source": [
         "### The Softmax regression loss function\n",
         "\n",
-        "$$F(\\{w_k\\}_{k=1} ^l) = -\\frac{1} {m} \\sum_{p=1}^l (c_p)^T log\\left(diag\\left\\{\\sum_{j=1}^lexp(X^Tw_j)\\right\\}^{-1} exp(X^Tw_p)\\right)$$"
+        "$$F \\left( \\left\\{w_k \\right\\}_{k=1} ^l \\right) = -\\frac{1} {m} \\sum_{p=1}^l (c_p)^T log\\left(diag\\left\\{\\sum_{j=1}^lexp(X^Tw_j)\\right\\}^{-1} exp(X^Tw_p)\\right)$$"
       ]
     },
     {
@@ -196,7 +188,7 @@
         "      - Cp\n",
         "  )\n",
         "\n",
-        "  assert grad_wp.shape == (datapoint_size, 1), f\"{grad_wp.shape = }\"\n",
+        "#   assert grad_wp.shape == (datapoint_size, 1), f\"{grad_wp.shape = }\"\n",
         "\n",
         "  return grad_wp\n",
         "\n",
@@ -212,7 +204,7 @@
         "\n",
         "  grad_W = np.array(grad_wp_list).T.squeeze()\n",
         "\n",
-        "  assert grad_W.shape == (datapoint_size, classes_num), f\"{grad_W.shape = }\"\n",
+        "#   assert grad_W.shape == (datapoint_size, classes_num), f\"{grad_W.shape = }\"\n",
         "\n",
         "  return grad_W"
       ]
@@ -271,7 +263,7 @@
         "  labels = np.random.randint(classes_num, size=datapoints_num)\n",
         "  C = np.identity(classes_num)[:, labels] # pulling columns from identity to get one-hot encoding\n",
         "\n",
-        "  assert C.shape == C_shape, f\"{C.shape = }, {C_shape = }\"\n",
+        "#   assert C.shape == C_shape, f\"{C.shape = }, {C_shape = }\"\n",
         "\n",
         "  return X, W, C"
       ]
@@ -295,14 +287,10 @@
         "def do_softmax_gradient_test(X, W, C):\n",
         "  step_direction = np.random.randn(*W.shape)\n",
         "  epsilon = 0.1\n",
-        "  # epsilon = 1\n",
         "\n",
         "  W0 = W\n",
         "  objective_at_W0 = softmax_regression_loss(X, W0, C)\n",
         "  grad_at_W0 = softmax_regression_gradient(X, W0, C)\n",
-        "\n",
-        "  # print(f\"{objective_at_W0.shape = }\")\n",
-        "  # print(f\"{grad_at_W0.shape = }\")\n",
         "\n",
         "  steps_num = 8\n",
         "  errors_order_1 = np.zeros(steps_num)\n",
@@ -320,7 +308,6 @@
         "  for step_num in steps_axis:\n",
         "    step_size = epsilon * (0.5 ** step_num)\n",
         "    objective_at_Wk = softmax_regression_loss(X, W0 + step_size * step_direction, C)\n",
-        "    # print(f\"{objective_at_Wk.shape = }\")\n",
         "\n",
         "    errors_order_1[step_num] = np.abs( objective_at_Wk - objective_at_W0 )\n",
         "    errors_order_2[step_num] = np.abs( objective_at_Wk - objective_at_W0\n",
@@ -546,15 +533,14 @@
         "    val_success_percentages = [\n",
         "      classification_success(X_val_sub, weights, Y_val_sub) ]\n",
         "\n",
-        "  gradient_norms = []\n",
-        "\n",
         "  # optimization loop\n",
         "  iteration_num = 0\n",
         "  for epoch_num in range(1, max_epochs + 1):\n",
         "    epoch_gradient_norms = []\n",
         "    for (minibatch_X, minibatch_Y) in epoch_generator(X_train, Y_train, minibatch_size):\n",
         "      gradient = objective_func_gradient(minibatch_X, weights, minibatch_Y)\n",
-        "      # weights -= learning_rate * gradient\n",
+        "      \n",
+        "\t  # weights -= learning_rate * gradient\n",
         "      iteration_num += 1\n",
         "      weights, m, v = ADAM_updated_variables(gradient, weights, m, v,\n",
         "        learning_rate, iteration_num)\n",
@@ -651,7 +637,7 @@
         "id": "X4IpMCdHCism"
       },
       "source": [
-        "###Testing optimizer implementation using random least squares data\n",
+        "### Testing optimizer implementation using random least squares data\n",
         "\n",
         "Defining the least squares loss:\n",
         "$$F(w) = \\frac{1}{2m} \\left\\|Xw-y\\right\\|^2_2$$\n",
@@ -1231,7 +1217,7 @@
       ],
       "source": [
         "# on train results\n",
-        "# for each dataset - sort by avg ascending, std descending\n",
+        "# for each dataset - sort by avg descending, std ascending\n",
         "print(\"Train set success % results:\")\n",
         "\n",
         "format_string = \"{:<35}{:<20}{:<20}\"\n",
@@ -1409,7 +1395,7 @@
       ],
       "source": [
         "# on validation results\n",
-        "# for each dataset - sort by avg ascending, std descending\n",
+        "# for each dataset - sort by avg descending, std ascending\n",
         "print(\"Validation set success % results:\")\n",
         "\n",
         "format_string = \"{:<35}{:<20}{:<20}\"\n",
