--- a/part1_mini_sci_comp.ipynb
+++ b/part1_mini_sci_comp.ipynb
@@ -1593,7 +1593,7 @@
         "  * Best avg validation set result was around 27% with std of 1% -> (+7%)\n",
         "  * Best avg train set result was around 49% with std of 0% -> (+29%)\n",
         "\n",
-        "From the results it's clear that the model did succeeded in learning something especially on the train set. But it wasn't generalizing enough.\n",
+        "From the results it's clear that the model did succeed in learning something especially on the train set. But it wasn't generalizing enough.\n",
         "\n"
       ]
     }
