--- a/part1_mini_sci_comp.ipynb
+++ b/part1_mini_sci_comp.ipynb
@@ -913,7 +913,7 @@
       "source": [
         "Hyper-parameters:\n",
         "\n",
-        "Testing the training performance, we tried training classification with our optimizer given $learning\\_rate∈\\left\\{1e^-n \\space | \\space n = 0,1, \\dots 5\\right\\}$ and $minibatch\\_size∈\\left\\{10, 50, 100, 200, 500, 1000\\right\\}$"
+        "Testing the training performance, we tried training classification with our optimizer given $learning\\_rate∈\\left\\{1e^{-n} \\space | \\space n = 0,1, \\dots 5\\right\\}$ and $minibatch\\_size∈\\left\\{10, 50, 100, 200, 500, 1000\\right\\}$"
       ]
     },
     {
@@ -1000,7 +1000,7 @@
         }
       ],
       "source": [
-        "# saving and downloading the results to avoid running grid search again in case collab session will disconnet\n",
+        "# saving and downloading the results to avoid running grid search again in case collab session will disconnect\n",
         "GRID_SEARCH_BACKUP_FILE = f\"{datetime.datetime.now():%Y-%m-%d-%H-%M-%S}-ADAM-grid_search_result.bak\"\n",
         "\n",
         "with open(GRID_SEARCH_BACKUP_FILE, \"wb\") as grid_search_file:\n",
